--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-man page
-wrap lua_newtable create/push with generic vararg version.
-pass virtual keycode to swap_keys()
-pass keyboard identifier to swap_keys()
+1. man page
+2. wrap lua_newtable create/push with generic vararg version.
+3. pass virtual keycode to swap_keys()
+4. pass keyboard identifier to swap_keys()
 
