--- a/TODO
+++ b/TODO
@@ -2,4 +2,7 @@
 2. wrap lua_newtable create/push with generic vararg version.
 3. pass virtual keycode to swap_keys()
 4. pass keyboard identifier to swap_keys()
+5. make lua_newtable reusable (ie. don't keep on recreating it).
+6. Pass a timestamp value to swap_keys() - potentially useful for a double bounce.
+
 
