Fixed launching of cmd-key-happy via launchd on Mavericks
Added an additional step for the installation on Mavericks.  The
makefile rule 'install-security-exception-for-cmd-key-happy' now updates
the database which governs which applications can use the accessibility
APIs.

On Mavericks, as noted in the install file, the installation procedure
is now:

  $ make install
  $ make install-rcfile   # only if you have no ~/.cmd-key-happy.lua
  $ make install-security-exception-for-cmd-key-happy
  $ make install-plist

Closes github issue #12.

--- a/INSTALL
+++ b/INSTALL
@@ -24,6 +24,10 @@ Copy the sample rcfile (example-rcfile.lua) to ~/.cmd-key-happy.lua:
 
   $ make install-rcfile
 
+**** Mavericks only ****
+  $ make install-security-exception-for-cmd-key-happy
+*** End Mavericks only ****
+
 Install the launchd configuration:
 
   $ make install-plist
@@ -42,4 +46,3 @@ I have also declared my Terminal type as "rxvt" and with this I can
 ssh into remote Linux boxes and have cmd act as the alt key.  Using
 rxvt seems to be the missing link in having a usable "emacs -nw" on
 remote machines.
-
