--- a/INSTALL
+++ b/INSTALL
@@ -42,7 +42,16 @@ readline navigation behaviour you would get if you were using either
 an xterm or iTerm - and that is much more desirable than trying to get
 my thumb to use the alt (or option) key.
 
-I have also declared my Terminal type as "rxvt" and with this I can
-ssh into remote Linux boxes and have cmd act as the alt key.  Using
-rxvt seems to be the missing link in having a usable "emacs -nw" on
-remote machines.
+Mavericks update
+================
+
+I don't believe this is necessary on Mavericks as my terminal type is
+'xterm-256color' and Terminal/cmd-key-happy works quite happily with
+that combination. This comment extends back to Leopard and I'm
+preserving it for those who are still running Leopard.
+
+  "I have also declared my Terminal type as "rxvt" and with this I can
+   ssh into remote Linux boxes and have cmd act as the alt key.  Using
+   rxvt seems to be the missing link in having a usable "emacs -nw" on
+   remote machines."
+
